iml-services/iml-devices/src/snapshots/compute_virtual_device_changes__vd_with_shared_parents_removed_from_oss2_when_parent_disappears.snap
---
source: iml-services/iml-devices/src/virtual_device.rs
expression: updates
---
{
    (
        DeviceId(
            "c",
        ),
        Fqdn(
            "oss1",
        ),
    ): Update(
        DeviceHost {
            device_id: DeviceId(
                "c",
            ),
            fqdn: Fqdn(
                "oss1",
            ),
            local: false,
            paths: Paths(
                {
                    "/fake/path/zpool/a",
                },
            ),
            mount_path: MountPath(
                None,
            ),
            fs_type: Some(
                "some_fs",
            ),
            fs_label: Some(
                "some_label",
            ),
            fs_uuid: Some(
                "some_uuid",
            ),
        },
    ),
    (
        DeviceId(
            "c",
        ),
        Fqdn(
            "oss2",
        ),
    ): Remove(
        DeviceHost {
            device_id: DeviceId(
                "c",
            ),
            fqdn: Fqdn(
                "oss2",
            ),
            local: false,
            paths: Paths(
                {},
            ),
            mount_path: MountPath(
                None,
            ),
            fs_type: None,
            fs_label: None,
            fs_uuid: None,
        },
    ),
}
